testdata/golden/sema/valid/mut_ref_local_write.sg
// Tests that writing through a &mut local reference is allowed.
fn main() -> nothing {
    let mut x: int = 1;
    let r: &mut int = &mut x;
    *r = 2;
    return;
}
